[package]
authors = ["Dima Bushuev diman1ghtly@gmail.com"]
name = "pallet-evercity-accounts"
description = 'Pallet for evercity blockchain accounting'
version = "0.1.8"
edition = "2021"
homepage = 'https://evercity.io'
license = 'Apache-2.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.124'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies.serde]
version = '1.0.119'

try-runtime = ['frame-support/try-runtime']


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-api = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-api/std',
    'pallet-timestamp/std',
]